# ShunPlus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: smoke_test.py
scripts/: generate_sdk.py
scripts/local_tests/: benchmark_all_symbols_today_1m.py  benchmark_sz000001_history_1m.py
src/shunplus/: __init__.py  _generated.py  _types.py  client.py  entitlements.py  exceptions.py  models.py
tests/integration/: test_client_http.py
tests/unit/: test_datetime_normalization.py  test_generated_methods.py  test_models.py  test_symbol_normalization.py
